RecipeSage-785 Drag and drop between categories working and persisting between shopping list lookups

--- a/packages/frontend/src/assets/i18n/de-de.json
+++ b/packages/frontend/src/assets/i18n/de-de.json
@@ -647,6 +647,7 @@
     "pages.shoppingListPopover.showAddedBy": "Anzeigen hinzugefügt von",
     "pages.shoppingListPopover.showAddedOn": "Anzeigen hinzugefügt am",
     "pages.shoppingListPopover.preferDelete": "Nach Abschluss löschen",
+    "pages.shoppingListPopover.edit": "Zutatenkategorien bearbeiten",
     "pages.shoppingListPopover.print": "Drucken",
     "pages.shoppingListPopover.removeAll": "Alle Artikel entfernen",
     "pages.shoppingListPopover.delete": "Liste löschen",
