--- a/packages/frontend/src/assets/i18n/he.json
+++ b/packages/frontend/src/assets/i18n/he.json
@@ -647,6 +647,7 @@
     "pages.shoppingListPopover.showAddedBy": "הצגת מי הוסיף",
     "pages.shoppingListPopover.showAddedOn": "הצגת מתי נוסף",
     "pages.shoppingListPopover.preferDelete": "מחק בסיום",
+    "pages.shoppingListPopover.edit": "עריכת קטגוריות מרכיבים",
     "pages.shoppingListPopover.print": "הדפסה",
     "pages.shoppingListPopover.removeAll": "הסרת כל הפריטים",
     "pages.shoppingListPopover.delete": "מחיקת רשימה",
