--- a/packages/frontend/src/assets/i18n/nl.json
+++ b/packages/frontend/src/assets/i18n/nl.json
@@ -642,6 +642,7 @@
     "pages.shoppingListPopover.showAddedOn": "Toegevoegd op tonen",
     "pages.shoppingListPopover.preferDelete": "Verwijderen wanneer klaar",
     "pages.shoppingListPopover.actions.title": "Acties",
+    "pages.shoppingListPopover.edit": "Ingrediëntcategorieën bewerken",
     "pages.shoppingListPopover.print": "Printen",
     "pages.shoppingListPopover.update": "Lijst hernoemen/bewerken",
     "pages.shoppingListPopover.dangerZone.title": "Gevarenzone",
