--- a/packages/frontend/src/assets/i18n/pt-pt.json
+++ b/packages/frontend/src/assets/i18n/pt-pt.json
@@ -709,6 +709,7 @@
     "pages.shoppingListPopover.showAddedOn": "Mostrar Adicionado Em",
     "pages.shoppingListPopover.preferDelete": "Eliminar Após Conclusão",
     "pages.shoppingListPopover.actions.title": "Ações",
+    "pages.shoppingListPopover.edit": "Editar categorias de ingredientes",
     "pages.shoppingListPopover.print": "Imprimir",
     "pages.shoppingListPopover.update": "Editar/Renomear Lista",
     "pages.shoppingListPopover.dangerZone.title": "Zona de Perigo",
