--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -1012,6 +1012,9 @@
   "components.messaging.notificationPermission.header": "Requires Notification Permissions",
   "components.messaging.notificationPermission.message": "To notify you when your contacts send you messages, we need notification access. After dismissing this popup, you will be prompted to enable notification access.",
 
+  "components.messaging.shoppingList.categoryEdit.help.header": "Edit shopping list categories",
+  "components.messaging.shoppingList.categoryEdit.help.message": "Selecting edit allows you to drag-and-drop shopping list items to a new category",
+
   "components.selectCollaborators.title": "Collaborators",
   "components.selectCollaborators.placeholder": "Add collaborators by email address",
   "components.selectCollaborators.added": "Already added",
