label-and-order-meals: Show meal options in plan. Move meal options to config.

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -804,6 +804,29 @@
   "pages.settings.oled.message": "The black (OLED) theme may make it difficult to distinguish between elements and alerts. Shadows and other visual animations will also not be displayed.",
   "pages.settings.sync.header": "Sync Triggered",
   "pages.settings.sync.message": "You will see a notification pop up when the sync has completed if you have enabled notification permissions for the app via the messaging page.",
+  
+  "pages.settings.mealOptions": "Meal Options",
+  "pages.settings.mealOptions.description": "Customize your meal options to suit your dietary preferences and schedule. Manage and organize your meals efficiently with our intuitive meal options settings.",
+  "pages.settings.mealOptions.new": "New Meal Option",
+  "pages.settings.mealOptions.new.title": "Create a new meal option",
+  "pages.settings.mealOptions.new.description": "Create a new meal option to customize your meal planning experience. Add, edit, or remove meal options to suit your dietary preferences and schedule.",
+  "pages.settings.mealOptions.new.titleInput": "Label",
+  "pages.settings.mealOptions.new.titleInputPlaceholder": "e.g. breakfast, lunch, dinner, snacks, etc.",
+  "pages.settings.mealOptions.new.titleInputHint": "",
+  "pages.settings.mealOptions.new.timeInput": "Time",
+  "pages.settings.mealOptions.new.timeInputPlaceholder": "Enter the time for your meal option",
+  "pages.settings.mealOptions.new.timeInputHint": "This will be used to identify your meal option in the meal calendar.",
+
+  "pages.settings.mealOptions.manage.title": "Manage {{name}}",
+  "pages.settings.mealOptions.manage.warning": "Note: These actions are permanent",
+  "pages.settings.mealOptions.manage.update": "Update",
+  "pages.settings.mealOptions.manage.delete": "Delete",
+
+  "pages.settings.mealOptions.update.header": "Update {{name}}",
+  "pages.settings.mealOptions.update.placeholder": "Enter the new title and time for your meal option",
+
+  "pages.settings.mealOptions.delete.header": "Delete {{name}}",
+
   "sync.notification.title": "Offline Sync Complete",
   "sync.notification.body": "Your content has been cached for offline use, and will be kept up-to-date automatically.",
 
@@ -1125,4 +1148,6 @@
   "generic.options": "Options",
   "generic.submit": "Submit",
   "generic.labeledPageTitle": "{{title}} - RecipeSage"
+
+  
 }
