feat: debug store

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -774,6 +774,7 @@
   "pages.settings.section1.title": "Data & Account",
   "pages.settings.import": "Import Recipe Data",
   "pages.settings.export": "Export Recipe Data",
+  "pages.settings.debugDump": "Download Debug Dump for Support",
   "pages.settings.account": "Account Settings & Stats",
   "pages.settings.logout": "Log Out",
   "pages.settings.section2.title": "General Settings",
