feat: better categorization

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -852,6 +852,18 @@
   "pages.shoppingList.removeMultiple.message": "This will permanently delete these items from this list.",
   "pages.shoppingList.removed": "Removed {{itemCount}} item(s)",
   "pages.shoppingList.removed.undo": "Undo",
+  "pages.shoppingList.category.uncategorized": "Uncategorized",
+  "pages.shoppingList.category.produce": "Produce",
+  "pages.shoppingList.category.dairy": "Dairy",
+  "pages.shoppingList.category.meat": "Meat",
+  "pages.shoppingList.category.bakery": "Bakery",
+  "pages.shoppingList.category.grocery": "Grocery",
+  "pages.shoppingList.category.liquor": "Liquor",
+  "pages.shoppingList.category.seafood": "Seafood",
+  "pages.shoppingList.category.nonfood": "Nonfood",
+  "pages.shoppingList.category.frozen": "Frozen",
+  "pages.shoppingList.category.canned": "Canned",
+  "pages.shoppingList.category.beverages": "Beverages",
 
   "pages.shoppingListPopover.options.title": "Options",
   "pages.shoppingListPopover.sortBy": "Sort by",
@@ -1067,6 +1079,11 @@
   "components.shoppingListItem.recipe": "For recipe:",
   "components.shoppingListItem.added": "Added",
   "components.shoppingListItem.addedBy": "Added by",
+  "components.shoppingListItem.moveTo": "Move to Section",
+  "components.shoppingListItem.moveToCustom": "Custom Category",
+  "components.shoppingListItem.customCategory.title": "Move to Custom Category",
+  "components.shoppingListItem.customCategory.message": "Enter the name of the custom category",
+  "components.shoppingListItem.customCategory.placeholder": "Category name...",
 
   "components.tos.warning": "By continuing, you're agreeing to the RecipeSage",
   "components.tos.title": "Terms of Service",
