feat: move a significant number of interactions over to TRPC

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -368,6 +368,8 @@
   "pages.newLabelItemModal.labelTitleInput": "Label Name",
   "pages.newLabelItemModal.labelTitleInputPlaceholder": "Enter label name",
   "pages.newLabelItemModal.labelTitleInputHint": "Many people start simple labels such as \"breakfast\", \"dessert\", or \"vegetarian\"",
+  "pages.newLabelItemModal.badLabelMessage": "Your title contains invalid characters",
+  "pages.newLabelItemModal.existingConflict": "A label with that title already exists",
 
   "pages.manageLabelGroupModal.title": "Manage Label Category",
   "pages.manageLabelGroupModal.groupTitle": "Label Category Name",
