feat: add improved warning & messaging for unsupported sites

--- a/packages/frontend/src/assets/i18n/en-us.json
+++ b/packages/frontend/src/assets/i18n/en-us.json
@@ -601,13 +601,14 @@
   "pages.editRecipe.clipURL.header": "Autofill recipe from URL",
   "pages.editRecipe.clipURL.message": "Enter a website URL to grab recipe contents",
   "pages.editRecipe.clipURL.placeholder": "Recipe URL",
-  "pages.editRecipe.clipURL.invalidUrl": "Error: You must provide a valid URL",
+  "pages.editRecipe.clipURL.invalidUrl": "You must provide a valid URL",
+  "pages.editRecipe.clipURL.unsupportedSiteUrl": "Sites like YouTube, TikTok, etc. do not usually succeed, since they block scrapers. I recommend using the browser extension, or taking a screenshot and using the image importer instead.",
   "pages.editRecipe.clipText.header": "Autofill recipe from block of text",
   "pages.editRecipe.clipText.message": "Enter a block of text with a recipe somewhere in it",
   "pages.editRecipe.clipText.placeholder": "Text that includes recipe...",
   "pages.editRecipe.clipText.invalid": "Error: Text too short or could not recognize recipe",
   "pages.editRecipe.clip.loading": "Please wait...",
-  "pages.editRecipe.clip.failed": "Failed to autofill. It is expected that some content may fail to autofill, but please contact me if you're having consistent issues.",
+  "pages.editRecipe.clip.failed": "Failed to autofill. Some sites block autofill, so you may have better luck with the RecipeSage browser extension, or by copying the site text and using the autofill from text option. Please contact me if you're having consistent issues with multiple different sites.",
   "pages.editRecipe.clip.failedSelfhost": "Please check your OpenAI credentials as described in the selfhosting readme",
   "pages.editRecipe.missingLabelGroup.title": "Missing label group",
   "pages.editRecipe.missingLabelGroup.message": "You've specified that the label group \"{{groupName}}\" should be required. You can turn this off via the my labels page.",
@@ -1177,6 +1178,7 @@
 
   "generic.showMore": "Show More",
   "generic.error": "Error",
+  "generic.warning": "Warning",
   "generic.reload": "Reload",
   "generic.delete": "Delete",
   "generic.cancel": "Cancel",
